# Boun_Perception

./: CMakeLists.txt  README.md  package.xml
HDD_models/: HddModel1.ttm  HddModel1_lever_pcb.ttm  HddModel2.ttm  SceneLoader.ttm  screwRemover.ttm  shapePublisher.ttm
scripts/: PreparePolygons.py  load_scene.py
